style.css
*{
    margin: 0%;
    padding: 0;

}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
    flex: 1;
}

/* Section 1 */

.section1 {
    background-color: #1f2937;
    display: flex;
    justify-content: center;
}

.section1-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   max-width: 56%;
   padding: 16px 128px 64px 128px;
   color: white;
   flex: 1;
   margin: 0;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex: 1;
    width: 100%;
}

.logo {
    font-size: 24px;
    color: #f9faf8;
}

.links {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    gap: 16px;
    align-items: center;
}

.link-item {
    text-decoration: none;
    font-size: 18px;
    color: #e5e7eb;
}

.header-content-container {
    width: 100%;
    display: flex;
    padding: 64px;
    gap: 128px;
    justify-content: space-between;
}

.content {
    max-width: 36%;
    flex: 1;
}

#content-heading {
    font-size: 48px;
    font-weight: 800;
    color: #f9faf8;
}

#content-paragraph{
    font-size: 18px;
    color: #e5e7eb;
}

#sign-up-button-top {
    background-color: #3b82f6;
    color: #e5e7eb;
    font-weight: 700;
    border-radius: 8px;
    padding: 8px 32px;
}

#top-image {
    flex: 1 2 0;
    max-width: 600px;
    min-width: 300px;
    min-height: 150px;
}




/* Section 2 */

.section2 {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

.section2-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 56%;
    padding: 16px 128px 64px 128px;
    flex: 1;
    margin: 0;
 }

.section2-heading {
    text-align: center;
    font-size: 36px;
    font-weight: 800;
    color: #1f2937;
    padding: 32px;
    width: 100%;
}

.card-container {
    display: flex;
    justify-content: space-around;
    padding-top: 32px;
    width: 100%;
}

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 150px;
}

.card-box {
    display: block;
    border: 4px solid #3b82f6;
    border-radius: 16px;
    width: 150px;
    height: 150px;
}

.card-text {
    font-size: 18px;
    color: #1f2937;
    width: 100%;
    text-align: center;
}



/* Section 3  */

.section3 {
    background-color: #e5e7eb;
    padding: 64px 0px;
}

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight: 300;
    color: #1f2937;
    padding: 64px 31% 0px 31%;
}

.author {
    font-size: 18px;
    font-weight: 900;
    padding: 8px 25%;
    text-align: end;
    color: #1f2937;
} 

/* Section 4 */

.section4 {
    background-color: #ffffff;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #f9faf8;
}

.section4-container {
    background-color: #3b82f6;
    padding: 32px;
    border-radius: 8px;
    width: 53%;
    margin: 64px auto;
    padding: 64px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.section4-heading {
    font-weight: 700;
}

.sign-up-button {
    color: #f9faf8;
    font-weight: 700;
    background-color: #3b82f6;
    border: 4px solid #f9faf8 ;
    border-radius: 8px;
    width: 128px;
    height: 32px;
}

/* Footer */

.footer {
    text-align: center;
    background-color: #1f2937;
    color: #f9faf8;
    padding: 32px;
}

